Added API to fetch daily assigned chapters based on group id.
