# src/main/java/com/saibaba/saibabaparayana/entity/DailyAssignedChapters.java
@@ -3,7 +3,7 @@ package com.saibaba.saibabaparayana.entity;
 import jakarta.persistence.*;
 import lombok.Data;
 
-import java.util.Date;
+import java.time.LocalDate;
 
 @Entity
 @Data
@@ -24,13 +24,13 @@ public class DailyAssignedChapters {
     private Long chapterId;
 
     @Column (name = "date", nullable = false)
-    private Date date;
+    private LocalDate date;
 
     @Column (name = "created_date", nullable = false)
-    private Date createdDate;
+    private LocalDate createdDate;
 
     @Column (name = "last_updated_date", nullable = false)
-    private Date lastUpdatedDate;
+    private LocalDate lastUpdatedDate;
 
     @Column (name = "created_user", nullable = false)
     private String createdUser;
